--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <button class="btn btn-default" ng-click="checkLunch()">Check If Too Much</button>
          </div>
          <div class="form-group message"
-          style="color:{{fontcolor}}; border: 2px solid {{fontcolor}};">
+          style="color:{{msgcolor}}; border: 2px solid {{msgcolor}};">
            {{message}}
          </div>
    </div>
